new data prep and graphs

--- a/src/predictoffdefrank.ipynb
+++ b/src/predictoffdefrank.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +30,7 @@
     "        winner = row['winner']\n",
     "        loser = row['loser']\n",
     "        week = row['week']\n",
-    "        # abs margin or percept, linear decay, reward away wins\n",
-    "        margin = row['margin_victory'] * week / week_num * (2 if not row['home_team_winner'] else 1) \n",
+    "        margin = row['margin']* week / week_num\n",
     "\n",
     "        key = (loser, winner)\n",
     "        margin_totals[key] += margin\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,68 +58,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assume 'game_results' is your complete dataset of NFL game results\n",
-    "game_results = pd.read_csv('../data/nfl_games.csv')"
+    "df_results = pd.read_csv('../data/nfl_games_pfr.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Team  Ranking SeasonWeek  Season  Week\n",
-      "0  PHI  0.03934   2024_W02    2024     2\n",
-      "1  ATL  0.04988   2024_W02    2024     2\n",
-      "2  CHI  0.01924   2024_W02    2024     2\n",
-      "3  HOU  0.03630   2024_W02    2024     2\n",
-      "4  DEN  0.01645   2024_W02    2024     2\n",
-      "SeasonWeek  2006_W02  2006_W03  2006_W04  2006_W05  2006_W06  2006_W07  \\\n",
+      "  Team  Ranking SeasonWeek  Season  Week     Type\n",
+      "0   KC  0.01464   2024_W02    2024     2  Offense\n",
+      "1  BAL  0.03461   2024_W02    2024     2  Offense\n",
+      "2  PHI  0.01464   2024_W02    2024     2  Offense\n",
+      "3   GB  0.02024   2024_W02    2024     2  Offense\n",
+      "4  ATL  0.02501   2024_W02    2024     2  Offense\n",
+      "SeasonWeek  2020_W02  2020_W03  2020_W04  2020_W05  2020_W06  2020_W07  \\\n",
       "Team                                                                     \n",
-      "ARI          0.05767   0.01694   0.00924   0.00897   0.00870   0.00762   \n",
-      "ATL          0.03417   0.02544   0.05557   0.05373   0.05325   0.03257   \n",
-      "BAL          0.03486   0.02559   0.02524   0.02340   0.04358   0.02593   \n",
-      "BUF          0.02926   0.02200   0.02135   0.01775   0.01950   0.03467   \n",
-      "CAR          0.01756   0.01424   0.05788   0.05823   0.05609   0.03767   \n",
+      "ARI          0.04911   0.05144   0.03870   0.01496   0.02372   0.02224   \n",
+      "ATL          0.02908   0.01895   0.00865   0.00796   0.00883   0.01052   \n",
+      "BAL          0.05298   0.03218   0.01230   0.02112   0.01494   0.01414   \n",
+      "BUF          0.03548   0.02480   0.01053   0.01885   0.01680   0.02217   \n",
+      "CAR          0.05682   0.06940   0.20568   0.15440   0.18321   0.16836   \n",
       "\n",
-      "SeasonWeek  2006_W08  2006_W09  2006_W10  2006_W11  ...  2023_W11  2023_W12  \\\n",
+      "SeasonWeek  2020_W08  2020_W09  2020_W10  2020_W11  ...  2023_W12  2023_W13  \\\n",
       "Team                                                ...                       \n",
-      "ARI          0.00841   0.00782   0.00707   0.00591  ...   0.00798   0.00792   \n",
-      "ATL          0.01833   0.01436   0.01202   0.00951  ...   0.01030   0.01264   \n",
-      "BAL          0.04136   0.03618   0.03200   0.03249  ...   0.10652   0.06355   \n",
-      "BUF          0.01088   0.02441   0.03029   0.02031  ...   0.03253   0.03686   \n",
-      "CAR          0.02279   0.02008   0.01949   0.01750  ...   0.01095   0.00784   \n",
+      "ARI          0.02923   0.02642   0.03929   0.03513  ...   0.04046   0.03550   \n",
+      "ATL          0.03761   0.02663   0.01825   0.01659  ...   0.02956   0.03488   \n",
+      "BAL          0.02729   0.02523   0.02839   0.03472  ...   0.09415   0.07815   \n",
+      "BUF          0.01512   0.01025   0.01425   0.01239  ...   0.03030   0.02804   \n",
+      "CAR          0.12226   0.07552   0.06693   0.05261  ...   0.01393   0.01265   \n",
       "\n",
-      "SeasonWeek  2023_W13  2023_W14  2023_W15  2023_W16  2023_W17  2023_W18  \\\n",
+      "SeasonWeek  2023_W14  2023_W15  2023_W16  2023_W17  2023_W18  2024_W02  \\\n",
       "Team                                                                     \n",
-      "ARI          0.03517   0.03148   0.02420   0.02536   0.02706   0.03283   \n",
-      "ATL          0.01271   0.01215   0.01283   0.02295   0.02338   0.02159   \n",
-      "BAL          0.06506   0.05779   0.07061   0.09486   0.09742   0.08539   \n",
-      "BUF          0.01936   0.03232   0.04060   0.03717   0.03046   0.03084   \n",
-      "CAR          0.00791   0.00565   0.00626   0.00629   0.00576   0.00552   \n",
+      "ARI          0.03236   0.03614   0.02799   0.03704   0.03125   0.05837   \n",
+      "ATL          0.03039   0.02734   0.03035   0.03556   0.03461   0.02501   \n",
+      "BAL          0.07067   0.07164   0.06823   0.08001   0.06797   0.03461   \n",
+      "BUF          0.02771   0.03783   0.03741   0.02835   0.03365   0.06426   \n",
+      "CAR          0.01639   0.01675   0.01592   0.01668   0.01616   0.01464   \n",
       "\n",
-      "SeasonWeek  2024_W02  2024_W03  \n",
+      "SeasonWeek  2024_W03  2024_W04  \n",
       "Team                            \n",
-      "ARI          0.02919   0.03019  \n",
-      "ATL          0.04988   0.06600  \n",
-      "BAL          0.01645   0.01406  \n",
-      "BUF          0.05679   0.02922  \n",
-      "CAR          0.01645   0.02624  \n",
+      "ARI          0.03492   0.03964  \n",
+      "ATL          0.03305   0.01233  \n",
+      "BAL          0.03392   0.04151  \n",
+      "BUF          0.03003   0.02188  \n",
+      "CAR          0.01482   0.01477  \n",
       "\n",
-      "[5 rows x 293 columns]\n"
+      "[5 rows x 70 columns]\n"
      ]
     }
    ],
    "source": [
+    "# Offensive rankings\n",
     "# Initialize an empty list to store rankings DataFrames\n",
     "ranking_dfs = []\n",
+    "\n",
+    "game_results = df_results[['season','week','Winner Yds','Loser Yds','Margin Yds']]\n",
+    "game_results = game_results.rename(columns={'Winner Yds':'winner', 'Loser Yds':'loser','Margin Yds':'margin'})\n",
     "\n",
     "# Loop over each distinct season in the dataset\n",
     "for season in game_results['season'].unique():\n",
@@ -130,7 +136,7 @@
     "        filtered_data = season_data[season_data['week'] <= week]\n",
     "        \n",
     "        # Create the directed graph for the current season and weeks\n",
-    "        G = create_graph(filtered_data, week)\n",
+    "        G = create_graph(filtered_data,week)\n",
     "        \n",
     "        # Calculate the rankings based on the weighted graph\n",
     "        rankings = calculate_rankings(G)\n",
@@ -142,19 +148,149 @@
     "        rankings['SeasonWeek'] = f\"{season}_W{str(week).zfill(2)}\"\n",
     "        rankings['Season'] = season\n",
     "        rankings['Week'] = week\n",
+    "        rankings['Type'] = \"Offense\"\n",
     "        \n",
     "        # Append the rankings to the list\n",
     "        ranking_dfs.append(rankings)\n",
     "\n",
     "# Concatenate all rankings DataFrames into a single DataFrame\n",
-    "final_rankings_df = pd.concat(ranking_dfs)\n",
+    "final_offense_rankings_df = pd.concat(ranking_dfs)\n",
     "\n",
     "# Create a cross-tab view (pivot table) where each row is a team, and each column is Season+Week\n",
-    "pivot_df = final_rankings_df.pivot(index='Team', columns='SeasonWeek', values='Ranking')\n",
+    "pivot_df = final_offense_rankings_df.pivot(index='Team', columns='SeasonWeek', values='Ranking')\n",
     "\n",
     "# Display the cross-tab DataFrame\n",
-    "print(final_rankings_df.head())\n",
+    "print(final_offense_rankings_df.head())\n",
     "print(pivot_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Team  Ranking SeasonWeek  Season  Week     Type\n",
+      "0  BAL  0.01919   2024_W02    2024     2  Defense\n",
+      "1   KC  0.04936   2024_W02    2024     2  Defense\n",
+      "2   GB  0.01919   2024_W02    2024     2  Defense\n",
+      "3  PHI  0.05197   2024_W02    2024     2  Defense\n",
+      "4  PIT  0.01919   2024_W02    2024     2  Defense\n",
+      "SeasonWeek  2020_W02  2020_W03  2020_W04  2020_W05  2020_W06  2020_W07  \\\n",
+      "Team                                                                     \n",
+      "ARI          0.04210   0.04854   0.05538   0.05150   0.03561   0.02502   \n",
+      "ATL          0.03028   0.01877   0.01305   0.01040   0.00988   0.01536   \n",
+      "BAL          0.01637   0.01317   0.02406   0.01596   0.01336   0.01167   \n",
+      "BUF          0.04210   0.01849   0.01473   0.01011   0.01944   0.01870   \n",
+      "CAR          0.04210   0.02488   0.01666   0.01258   0.01608   0.02917   \n",
+      "\n",
+      "SeasonWeek  2020_W08  2020_W09  2020_W10  2020_W11  ...  2023_W12  2023_W13  \\\n",
+      "Team                                                ...                       \n",
+      "ARI          0.02669   0.03471   0.03372   0.03300  ...   0.03471   0.03051   \n",
+      "ATL          0.01210   0.01502   0.01707   0.01916  ...   0.04211   0.03992   \n",
+      "BAL          0.01673   0.01744   0.02147   0.01908  ...   0.01270   0.01164   \n",
+      "BUF          0.01402   0.01101   0.01167   0.01216  ...   0.03649   0.04059   \n",
+      "CAR          0.02305   0.02470   0.02011   0.02412  ...   0.06407   0.04578   \n",
+      "\n",
+      "SeasonWeek  2023_W14  2023_W15  2023_W16  2023_W17  2023_W18  2024_W02  \\\n",
+      "Team                                                                     \n",
+      "ARI          0.02779   0.03027   0.02862   0.03078   0.02984   0.01919   \n",
+      "ATL          0.03830   0.04363   0.04304   0.05251   0.05446   0.02897   \n",
+      "BAL          0.01361   0.01380   0.01362   0.01407   0.01415   0.01919   \n",
+      "BUF          0.03793   0.03770   0.04074   0.03952   0.04107   0.01919   \n",
+      "CAR          0.05159   0.04562   0.04128   0.04466   0.04479   0.03006   \n",
+      "\n",
+      "SeasonWeek  2024_W03  2024_W04  \n",
+      "Team                            \n",
+      "ARI          0.01494   0.01292  \n",
+      "ATL          0.02516   0.03094  \n",
+      "BAL          0.01494   0.01292  \n",
+      "BUF          0.01494   0.01292  \n",
+      "CAR          0.02129   0.02400  \n",
+      "\n",
+      "[5 rows x 70 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defensive rankings\n",
+    "# Initialize an empty list to store rankings DataFrames\n",
+    "ranking_dfs = []\n",
+    "\n",
+    "game_results = df_results[['season','week','Winner TO','Loser TO','Margin TO']]\n",
+    "game_results = game_results.rename(columns={'Winner TO':'winner', 'Loser TO':'loser','Margin TO':'margin'})\n",
+    "\n",
+    "# Loop over each distinct season in the dataset\n",
+    "for season in game_results['season'].unique():\n",
+    "    # Filter the game data for the current season\n",
+    "    season_data = game_results[game_results['season'] == season]\n",
+    "    \n",
+    "    # Loop over the weeks for this season\n",
+    "    for week in range(2, season_data['week'].max() + 1):\n",
+    "        # Filter the game data up to the current week for the current season\n",
+    "        filtered_data = season_data[season_data['week'] <= week]\n",
+    "        \n",
+    "        # Create the directed graph for the current season and weeks\n",
+    "        G = create_graph(filtered_data,week)\n",
+    "        \n",
+    "        # Calculate the rankings based on the weighted graph\n",
+    "        rankings = calculate_rankings(G)\n",
+    "\n",
+    "        # Round the rankings to 4 decimal places\n",
+    "        rankings['Ranking'] = rankings['Ranking'].round(5)\n",
+    "        \n",
+    "        # Add columns indicating the season and week, with a leading zero for weeks\n",
+    "        rankings['SeasonWeek'] = f\"{season}_W{str(week).zfill(2)}\"\n",
+    "        rankings['Season'] = season\n",
+    "        rankings['Week'] = week\n",
+    "        rankings['Type'] = \"Defense\"\n",
+    "        \n",
+    "        # Append the rankings to the list\n",
+    "        ranking_dfs.append(rankings)\n",
+    "\n",
+    "# Concatenate all rankings DataFrames into a single DataFrame\n",
+    "final_defense_rankings_df = pd.concat(ranking_dfs)\n",
+    "\n",
+    "# Create a cross-tab view (pivot table) where each row is a team, and each column is Season+Week\n",
+    "pivot_df = final_defense_rankings_df.pivot(index='Team', columns='SeasonWeek', values='Ranking')\n",
+    "\n",
+    "# Display the cross-tab DataFrame\n",
+    "print(final_defense_rankings_df.head())\n",
+    "print(pivot_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Team  Ranking SeasonWeek  Season  Week     Type\n",
+      "0    KC  0.01464   2024_W02    2024     2  Offense\n",
+      "1   BAL  0.03461   2024_W02    2024     2  Offense\n",
+      "2   PHI  0.01464   2024_W02    2024     2  Offense\n",
+      "3    GB  0.02024   2024_W02    2024     2  Offense\n",
+      "4   ATL  0.02501   2024_W02    2024     2  Offense\n",
+      "..  ...      ...        ...     ...   ...      ...\n",
+      "27  LAR  0.02852   2020_W17    2020    17  Defense\n",
+      "28  PIT  0.02790   2020_W17    2020    17  Defense\n",
+      "29  NYG  0.04691   2020_W17    2020    17  Defense\n",
+      "30  TEN  0.02279   2020_W17    2020    17  Defense\n",
+      "31  DEN  0.06669   2020_W17    2020    17  Defense\n",
+      "\n",
+      "[4480 rows x 6 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "combined_rankings = pd.concat([final_offense_rankings_df,final_defense_rankings_df])\n",
+    "print(combined_rankings)\n"
    ]
   },
   {
@@ -174,8 +310,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(final_rankings_df.dtypes)\n",
-    "print(game_results.dtypes)"
+    "# General LM from Chat GPT\n",
+    "df = pd.read_csv('nfl_data.csv')\n",
+    "\n",
+    "# Features (X) and target (y)\n",
+    "X = df[['HomeOffense', 'HomeDefense', 'AwayOffense', 'AwayDefense']]\n",
+    "y = df['Spread']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f'Mean Squared Error: {mse}')\n",
+    "print('Coefficients:', model.coef_)\n",
+    "print('Intercept:', model.intercept_)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -295,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
