--- a/src/dataprep_pfr.ipynb
+++ b/src/dataprep_pfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -25,18 +25,18 @@
      "output_type": "stream",
      "text": [
       "   Week  Day        Date    Time           Winner/tie Unnamed: 5  \\\n",
-      "0     1  Thu  2024-09-05  8:20PM   Kansas City Chiefs        NaN   \n",
-      "1     1  Fri  2024-09-06  8:15PM  Philadelphia Eagles        NaN   \n",
-      "2     1  Sun  2024-09-08  1:00PM  Pittsburgh Steelers          @   \n",
-      "3     1  Sun  2024-09-08  1:00PM       Houston Texans          @   \n",
-      "4     1  Sun  2024-09-08  1:00PM       Miami Dolphins        NaN   \n",
+      "0     5  Thu  2024-10-03  8:15PM      Atlanta Falcons        NaN   \n",
+      "1     1  Thu  2024-09-05  8:20PM   Kansas City Chiefs        NaN   \n",
+      "2     1  Fri  2024-09-06  8:15PM  Philadelphia Eagles        NaN   \n",
+      "3     1  Sun  2024-09-08  1:00PM  Pittsburgh Steelers          @   \n",
+      "4     1  Sun  2024-09-08  1:00PM       Houston Texans          @   \n",
       "\n",
       "              Loser/tie Unnamed: 7  PtsW  PtsL  YdsW  TOW  YdsL  TOL  \n",
-      "0      Baltimore Ravens   boxscore    27    20   353    1   452    1  \n",
-      "1     Green Bay Packers   boxscore    34    29   410    3   414    1  \n",
-      "2       Atlanta Falcons   boxscore    18    10   270    0   226    3  \n",
-      "3    Indianapolis Colts   boxscore    29    27   417    0   303    1  \n",
-      "4  Jacksonville Jaguars   boxscore    20    17   400    0   267    1  \n"
+      "0  Tampa Bay Buccaneers   boxscore    36    30   550    1   333    1  \n",
+      "1      Baltimore Ravens   boxscore    27    20   353    1   452    1  \n",
+      "2     Green Bay Packers   boxscore    34    29   410    3   414    1  \n",
+      "3       Atlanta Falcons   boxscore    18    10   270    0   226    3  \n",
+      "4    Indianapolis Colts   boxscore    29    27   417    0   303    1  \n"
      ]
     }
    ],
@@ -46,42 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Week  Day        Date    Time               Winner LoserIsHome  \\\n",
-      "0     1  Thu  2024-09-05  8:20PM   Kansas City Chiefs         NaN   \n",
-      "1     1  Fri  2024-09-06  8:15PM  Philadelphia Eagles         NaN   \n",
-      "2     1  Sun  2024-09-08  1:00PM  Pittsburgh Steelers           @   \n",
-      "3     1  Sun  2024-09-08  1:00PM       Houston Texans           @   \n",
-      "4     1  Sun  2024-09-08  1:00PM       Miami Dolphins         NaN   \n",
+      "   Week  Day        Date    Time             Winner LoserIsHome  \\\n",
+      "0     5  Thu  2024-10-03  8:15PM    Atlanta Falcons         NaN   \n",
+      "1     5  Sun  2024-10-06  9:30AM      New York Jets           @   \n",
+      "2     5  Sun  2024-10-06  1:00PM      Buffalo Bills           @   \n",
+      "3     5  Sun  2024-10-06  1:00PM  Carolina Panthers           @   \n",
+      "4     5  Sun  2024-10-06  1:00PM   Cleveland Browns           @   \n",
       "\n",
-      "                  Loser  PtsW  PtsL  YdsW  ...  Winner Abbr  Loser Abbr  \\\n",
-      "0      Baltimore Ravens    27    20   353  ...           KC         BAL   \n",
-      "1     Green Bay Packers    34    29   410  ...          PHI          GB   \n",
-      "2       Atlanta Falcons    18    10   270  ...          PIT         ATL   \n",
-      "3    Indianapolis Colts    29    27   417  ...          HOU         IND   \n",
-      "4  Jacksonville Jaguars    20    17   400  ...          MIA         JAC   \n",
+      "                   Loser  PtsW  PtsL   YdsW  ...  Loser Abbr  Home Team  \\\n",
+      "0   Tampa Bay Buccaneers  36.0  30.0  550.0  ...          TB        ATL   \n",
+      "1      Minnesota Vikings   NaN   NaN    NaN  ...         MIN        MIN   \n",
+      "2         Houston Texans   NaN   NaN    NaN  ...         HOU        HOU   \n",
+      "3          Chicago Bears   NaN   NaN    NaN  ...         CHI        CHI   \n",
+      "4  Washington Commanders   NaN   NaN    NaN  ...         WAS        WAS   \n",
       "\n",
-      "   Home Team  Away Team  Winner Yds Loser Yds Margin Yds Winner TO Loser TO  \\\n",
-      "0         KC        BAL         BAL        KC         99        KC      BAL   \n",
-      "1        PHI         GB          GB       PHI          4       PHI       GB   \n",
-      "2        ATL        PIT         PIT       ATL         44       ATL      PIT   \n",
-      "3        IND        HOU         HOU       IND        114       IND      HOU   \n",
-      "4        MIA        JAC         MIA       JAC        133       JAC      MIA   \n",
+      "   Away Team  Winner Yds  Loser Yds Margin Yds Winner TO Loser TO Margin TO  \\\n",
+      "0         TB         ATL         TB      217.0       ATL       TB       0.0   \n",
+      "1        NYJ         MIN        MIN        NaN       MIN      MIN       NaN   \n",
+      "2        BUF         HOU        HOU        NaN       HOU      HOU       NaN   \n",
+      "3        CAR         CHI        CHI        NaN       CHI      CHI       NaN   \n",
+      "4        CLE         WAS        WAS        NaN       WAS      WAS       NaN   \n",
       "\n",
-      "  Margin TO  \n",
-      "0         0  \n",
-      "1         2  \n",
-      "2         3  \n",
-      "3         1  \n",
-      "4         1  \n",
+      "  home_team_winner  \n",
+      "0             True  \n",
+      "1            False  \n",
+      "2            False  \n",
+      "3            False  \n",
+      "4            False  \n",
       "\n",
-      "[5 rows x 25 columns]\n"
+      "[5 rows x 26 columns]\n"
      ]
     }
    ],
@@ -110,6 +110,7 @@
     "df_games['Winner TO'] = df_games.apply(lambda row: row['Winner Abbr'] if row['TOW']>=row['TOL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Loser TO'] = df_games.apply(lambda row: row['Winner Abbr'] if row['TOW']<row['TOL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Margin TO'] = df_games.apply(lambda row: abs(row['TOW']-row['TOL']), axis=1)\n",
+    "df_games['home_team_winner'] = df_games.apply(lambda row: False if row['LoserIsHome']==\"@\" else True, axis=1)\n",
     "\n",
     "print(df_games.head())\n",
     "\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
