refactored and cleaned

--- a/src/dataprep_pfr.ipynb
+++ b/src/dataprep_pfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,26 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   Week  Day        Date    Time           Winner/tie Unnamed: 5  \\\n",
-      "0     5  Thu  2024-10-03  8:15PM      Atlanta Falcons        NaN   \n",
-      "1     1  Thu  2024-09-05  8:20PM   Kansas City Chiefs        NaN   \n",
-      "2     1  Fri  2024-09-06  8:15PM  Philadelphia Eagles        NaN   \n",
-      "3     1  Sun  2024-09-08  1:00PM  Pittsburgh Steelers          @   \n",
-      "4     1  Sun  2024-09-08  1:00PM       Houston Texans          @   \n",
+      "   Week  Day        Date    Time         Winner/tie Unnamed: 5  \\\n",
+      "0     5  Thu  2024-10-03  8:15PM    Atlanta Falcons        NaN   \n",
+      "1     5  Sun  2024-10-06  9:30AM      New York Jets          @   \n",
+      "2     5  Sun  2024-10-06  1:00PM      Buffalo Bills          @   \n",
+      "3     5  Sun  2024-10-06  1:00PM  Carolina Panthers          @   \n",
+      "4     5  Sun  2024-10-06  1:00PM   Cleveland Browns          @   \n",
       "\n",
-      "              Loser/tie Unnamed: 7  PtsW  PtsL  YdsW  TOW  YdsL  TOL  \n",
-      "0  Tampa Bay Buccaneers   boxscore    36    30   550    1   333    1  \n",
-      "1      Baltimore Ravens   boxscore    27    20   353    1   452    1  \n",
-      "2     Green Bay Packers   boxscore    34    29   410    3   414    1  \n",
-      "3       Atlanta Falcons   boxscore    18    10   270    0   226    3  \n",
-      "4    Indianapolis Colts   boxscore    29    27   417    0   303    1  \n"
+      "               Loser/tie Unnamed: 7  PtsW  PtsL   YdsW  TOW   YdsL  TOL  \n",
+      "0   Tampa Bay Buccaneers   boxscore  36.0  30.0  550.0  1.0  333.0  1.0  \n",
+      "1      Minnesota Vikings    preview   NaN   NaN    NaN  NaN    NaN  NaN  \n",
+      "2         Houston Texans    preview   NaN   NaN    NaN  NaN    NaN  NaN  \n",
+      "3          Chicago Bears    preview   NaN   NaN    NaN  NaN    NaN  NaN  \n",
+      "4  Washington Commanders    preview   NaN   NaN    NaN  NaN    NaN  NaN  \n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -60,28 +60,28 @@
       "3     5  Sun  2024-10-06  1:00PM  Carolina Panthers           @   \n",
       "4     5  Sun  2024-10-06  1:00PM   Cleveland Browns           @   \n",
       "\n",
-      "                   Loser  PtsW  PtsL   YdsW  ...  Loser Abbr  Home Team  \\\n",
-      "0   Tampa Bay Buccaneers  36.0  30.0  550.0  ...          TB        ATL   \n",
-      "1      Minnesota Vikings   NaN   NaN    NaN  ...         MIN        MIN   \n",
-      "2         Houston Texans   NaN   NaN    NaN  ...         HOU        HOU   \n",
-      "3          Chicago Bears   NaN   NaN    NaN  ...         CHI        CHI   \n",
-      "4  Washington Commanders   NaN   NaN    NaN  ...         WAS        WAS   \n",
+      "                   Loser  PtsW  PtsL   YdsW  ...  Loser Yds  Margin Yds  \\\n",
+      "0   Tampa Bay Buccaneers  36.0  30.0  550.0  ...         TB       217.0   \n",
+      "1      Minnesota Vikings   NaN   NaN    NaN  ...        MIN         NaN   \n",
+      "2         Houston Texans   NaN   NaN    NaN  ...        HOU         NaN   \n",
+      "3          Chicago Bears   NaN   NaN    NaN  ...        CHI         NaN   \n",
+      "4  Washington Commanders   NaN   NaN    NaN  ...        WAS         NaN   \n",
       "\n",
-      "   Away Team  Winner Yds  Loser Yds Margin Yds Winner TO Loser TO Margin TO  \\\n",
-      "0         TB         ATL         TB      217.0       ATL       TB       0.0   \n",
-      "1        NYJ         MIN        MIN        NaN       MIN      MIN       NaN   \n",
-      "2        BUF         HOU        HOU        NaN       HOU      HOU       NaN   \n",
-      "3        CAR         CHI        CHI        NaN       CHI      CHI       NaN   \n",
-      "4        CLE         WAS        WAS        NaN       WAS      WAS       NaN   \n",
+      "   Winner TO  Loser TO  Margin TO Margin Pts Total Pts Margin Pct  \\\n",
+      "0        ATL        TB        0.0        6.0      66.0      -60.0   \n",
+      "1        MIN       MIN        NaN        NaN       NaN        NaN   \n",
+      "2        HOU       HOU        NaN        NaN       NaN        NaN   \n",
+      "3        CHI       CHI        NaN        NaN       NaN        NaN   \n",
+      "4        WAS       WAS        NaN        NaN       NaN        NaN   \n",
       "\n",
-      "  home_team_winner  \n",
-      "0             True  \n",
-      "1            False  \n",
-      "2            False  \n",
-      "3            False  \n",
-      "4            False  \n",
+      "  home_team_winner away_win_bonus  \n",
+      "0             True              0  \n",
+      "1            False              1  \n",
+      "2            False              1  \n",
+      "3            False              1  \n",
+      "4            False              1  \n",
       "\n",
-      "[5 rows x 26 columns]\n"
+      "[5 rows x 30 columns]\n"
      ]
     }
    ],
@@ -110,7 +110,11 @@
     "df_games['Winner TO'] = df_games.apply(lambda row: row['Winner Abbr'] if row['TOW']>=row['TOL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Loser TO'] = df_games.apply(lambda row: row['Winner Abbr'] if row['TOW']<row['TOL'] else row['Loser Abbr'], axis=1)\n",
     "df_games['Margin TO'] = df_games.apply(lambda row: abs(row['TOW']-row['TOL']), axis=1)\n",
+    "df_games['Margin Pts'] = df_games.apply(lambda row: abs(row['PtsW']-row['PtsL']), axis=1)\n",
+    "df_games['Total Pts'] = df_games.apply(lambda row: abs(row['PtsW']+row['PtsL']), axis=1)\n",
+    "df_games['Margin Pct'] = df_games.apply(lambda row: row['Margin Pts']-row['Total Pts'], axis=1)\n",
     "df_games['home_team_winner'] = df_games.apply(lambda row: False if row['LoserIsHome']==\"@\" else True, axis=1)\n",
+    "df_games['away_win_bonus'] = df_games.apply(lambda row: 0 if row['home_team_winner'] else 1, axis=1)\n",
     "\n",
     "print(df_games.head())\n",
     "\n",
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
