--- a/src/predictoffdefrank.ipynb
+++ b/src/predictoffdefrank.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -458,12 +458,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\see_w\\AppData\\Local\\Temp\\ipykernel_19840\\3234919604.py:91: SettingWithCopyWarning: \n",
+      "C:\\Users\\see_w\\AppData\\Local\\Temp\\ipykernel_19840\\1985847129.py:91: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  merged_upcoming['Predicted Spread'] = y_pred_new\n"
+      "  merged_upcoming.loc[:,'Predicted Spread'] = y_pred_new\n"
      ]
     }
    ],
@@ -492,6 +492,7 @@
     "\n",
     "# Make predictions on the test set\n",
     "y_pred = model.predict(X_test)\n",
+    "\n",
     "\n",
     "# Evaluate the model\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -554,11 +555,13 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
+    "merged_played.loc[:,'Predicted Spread'] = y_train_pred\n",
+    "\n",
     "model.fit(X, y)\n",
     "\n",
     "# Make predictions on the test set\n",
     "y_pred_new = model.predict(X_new)\n",
-    "merged_upcoming['Predicted Spread'] = y_pred_new\n",
+    "merged_upcoming.loc[:,'Predicted Spread'] = y_pred_new\n",
     "print(merged_upcoming[['Home Team','Away Team','Delta_ScoreRank','Predicted Spread']])"
    ]
   },
